// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context can build deploy props 1`] = `
Object {
  "package": Object {
    "dependencies": Object {
      "express": "^4.17.1",
    },
    "from": "/Users/wballard/github/userbugreport/shipula/packages/express-sample",
    "license": "MIT",
    "main": "index.js",
    "name": "@shipula/express-sample",
    "scripts": Object {
      "build": "touch index.js",
      "start": "node index.js",
    },
    "version": "0.0.16",
  },
  "stackName": "default",
}
`;

exports[`Context can build env props with default stack 1`] = `
Object {
  "package": Object {
    "dependencies": Object {
      "express": "^4.17.1",
    },
    "from": "/Users/wballard/github/userbugreport/shipula/packages/express-sample",
    "license": "MIT",
    "main": "index.js",
    "name": "@shipula/express-sample",
    "scripts": Object {
      "build": "touch index.js",
      "start": "node index.js",
    },
    "version": "0.0.16",
  },
  "setVariables": Object {
    "a": "b",
  },
  "stackName": "default",
}
`;

exports[`Context can build env props with named stack 1`] = `
Object {
  "package": Object {
    "dependencies": Object {
      "express": "^4.17.1",
    },
    "from": "/Users/wballard/github/userbugreport/shipula/packages/express-sample",
    "license": "MIT",
    "main": "index.js",
    "name": "@shipula/express-sample",
    "scripts": Object {
      "build": "touch index.js",
      "start": "node index.js",
    },
    "version": "0.0.16",
  },
  "setVariables": Object {
    "a": "b",
    "junk": "stuff",
  },
  "stackName": "dev",
}
`;

exports[`Context can build info props with default stack 1`] = `
Object {
  "package": Object {
    "dependencies": Object {
      "express": "^4.17.1",
    },
    "from": "/Users/wballard/github/userbugreport/shipula/packages/express-sample",
    "license": "MIT",
    "main": "index.js",
    "name": "@shipula/express-sample",
    "scripts": Object {
      "build": "touch index.js",
      "start": "node index.js",
    },
    "version": "0.0.16",
  },
  "stackName": "default",
}
`;

exports[`Context can build info props with named stack 1`] = `
Object {
  "package": Object {
    "dependencies": Object {
      "express": "^4.17.1",
    },
    "from": "/Users/wballard/github/userbugreport/shipula/packages/express-sample",
    "license": "MIT",
    "main": "index.js",
    "name": "@shipula/express-sample",
    "scripts": Object {
      "build": "touch index.js",
      "start": "node index.js",
    },
    "version": "0.0.16",
  },
  "stackName": "dev",
}
`;
